--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Untitled</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 DOCTYPE html>
 
 <html>
@@ -290,7 +280,7 @@ DOCTYPE html>
 
             <h2>Resume</h2>
 
-            <a href="https://gray-veronika-13.tiiny.site" target="_blank" class="download-button">Download CV</a>
+            <a href="https://in.docworkspace.com/d/sIK3owcnCAvHQ_8UG?sa=601.1074 " target="_blank" class="download-button">Download CV</a>
 
         </center>
 
@@ -338,9 +328,4 @@ DOCTYPE html>
 
 </body>
 
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
 </html>
